--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2bb6b">  <td>21/01/14 18:25:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GithubDeneme.github()[pri:0, instance:com.testCases.GithubDeneme@12a94400]">github</td> 
-  <td>main@1910936570</td>   <td></td> </tr>
+<tr bgcolor="a1c272">  <td>21/01/21 13:17:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GithubDeneme.github()[pri:0, instance:com.testCases.GithubDeneme@563e4951]">github</td> 
+  <td>main@1131184547</td>   <td></td> </tr>
+<tr bgcolor="a1c272">  <td>21/01/21 13:17:11</td>   <td>55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GithubDeneme.github12()[pri:0, instance:com.testCases.GithubDeneme@563e4951]">github12</td> 
+  <td>main@1131184547</td>   <td></td> </tr>
+<tr bgcolor="a1c272">  <td>21/01/21 13:17:11</td>   <td>59</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GithubDeneme.githubdifererefds()[pri:0, instance:com.testCases.GithubDeneme@563e4951]">githubdifererefds</td> 
+  <td>main@1131184547</td>   <td></td> </tr>
 </table>
